--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
         production {
             dimension 'app_constants'
             buildConfigField "String", "API_URL", '\"https://api.themoviedb.org/3/\"'
+            buildConfigField "String", "API_IMAGE_URL", '\"https://image.tmdb.org/t/p/w500/\"'
             buildConfigField "String", "API_KEY", '\"48a6f6937012ae8e21026266fba8135f\"'
         }
 
@@ -54,7 +55,9 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.google.android:flexbox:0.3.2'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 
     //DEBUG
     implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
