--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.google.android:flexbox:0.3.2'
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-
+    implementation 'com.android.support:palette-v7:28.0.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     //DEBUG
     implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
